plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.8'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
    id "org.springdoc.openapi-gradle-plugin" version "1.6.0"
}

group = 'com.somecompany'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'
targetCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
    implementation 'org.springdoc:springdoc-openapi-security:1.6.14'
    implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation 'com.google.code.gson:gson:2.10.1'

    implementation 'org.liquibase:liquibase-core'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.testcontainers:postgresql:1.17.6'

    implementation "org.mapstruct:mapstruct:1.5.3.Final"
    annotationProcessor "org.mapstruct:mapstruct-processor:1.5.3.Final"
    testAnnotationProcessor "org.mapstruct:mapstruct-processor:1.5.3.Final"
}

tasks.named('test') {
    useJUnitPlatform()
}

compileJava {
    options.compilerArgs = ['-Amapstruct.defaultComponentModel=spring']
}

bootJar {
    archiveFileName = 'bookstore-app.jar'
}